apply plugin: "java"
apply plugin: 'java-library'

apply from: '../../dependencies.gradle'

def module_name = "backend-web"

sourceCompatibility = 1.8
targetCompatibility = 1.8

sourceSets.main.java.srcDirs = [ "emu", "src" ]
sourceSets.main.resources.srcDirs = [ "resources/" ]

task javadocJar(type: Jar) {
    classifier = 'javadoc'
    from javadoc
}

task sourcesJar(type: Jar) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

task fromClasses (type: Jar) {
    from (sourceSets.main.output){
    }
}

javadoc {
    options.encoding = 'UTF-8'
    options.addStringOption('Xdoclint:none', '-quiet')
}

configurations {
    provided
    implementation.extendsFrom provided
}

dependencies {
    provided "com.badlogicgames.gdx:gdx:$project.gdxVersion"
}

artifacts {
    archives javadocJar, sourcesJar
}

publishing {
    publications {
        imguiClasses(MavenPublication) {
            version project.gdxHtmlVersion + project.gdxHtmlType
            project.version = project.gdxHtmlVersion + project.gdxHtmlType
            artifactId module_name
            artifact fromClasses
        }
    }
}